--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -144,7 +144,16 @@ these are not routinely available for all scRNA-seq protocols [@Haque2017].
 <!--- Introduce BASiCS --->
 The Bioconductor package `r Biocpkg("BASiCS")` implements a Bayesian 
 hierarchical framework that accounts for both technical and biological sources 
-of noise in scRNA-seq datasets [@Vallejos2015; @Vallejos2016; @Eling2017]. 
+of noise in scRNA-seq datasets [@Vallejos2015; @Vallejos2016; @Eling2017]. The
+model was motivated by supervised experimental designs in which experimental 
+conditions corresponds to groups of cells defined *a priori* (e.g. selected 
+cell types obtained through FACS sorting). However, the approach can also be
+used in cases were the groups of cells of interest are computationally 
+identified through clustering. In such case, the model implemented in 
+`r Biocpkg("BASiCS")` does not account for issues associated to post-selection 
+inference, where the same data is analysed twice: first to perform clustering
+and then to compare expression profiles between clusters [@Lahnemann2020]. 
+
 `r Biocpkg("BASiCS")` jointly performs data normalisation, technical noise 
 quantification and downstream analyses, whilst propagating statistical 
 uncertainty across these steps. 
