--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -149,10 +149,11 @@ model was initially motivated by supervised experimental designs in which
 experimental conditions correspond to groups of cells defined *a priori* (e.g. 
 selected cell types obtained through FACS sorting). However, the approach can 
 also be used in cases where the groups of cells of interest are computationally 
-identified through clustering. In such case, the model implemented in 
-`r Biocpkg("BASiCS")` does not account for issues associated to post-selection 
-inference, where the same data is analysed twice: first to perform clustering
-and then to compare expression profiles between clusters [@Lahnemann2020]. 
+identified through clustering. In such cases, the model implemented in 
+`r Biocpkg("BASiCS")` does not currently address issues associated to 
+post-selection inference, where the same data is analysed twice: first to 
+perform clustering and then to compare expression profiles between clusters 
+[@Lahnemann2020]. 
 
 `r Biocpkg("BASiCS")` jointly performs data normalisation, technical noise 
 quantification and downstream analyses, whilst propagating statistical 
