--- a/Workflow.bib
+++ b/Workflow.bib
@@ -1516,3 +1516,19 @@ keywords = {variance estimation, spectral analysis, simulation, confidence inter
   abstract = {Abstract           Spatial genomics technologies enable new approaches to study how cells interact and function in intact multicellular environments but present a host of technical and computational challenges. Here we describe Splotch, a novel computational framework for the analysis of spatially resolved transcriptomics data. Splotch aligns transcriptomics data from multiple tissue sections and timepoints to generate improved posterior estimates of gene expression. We demonstrate alignment of a large corpus of single-cell RNA-seq data into an automatically generated spatial-temporal coordinate and study optimal design for spatial transcriptomics experiments.},
   langid = {english}
 }
+
+@article{Lloyd-Smith2007,
+  title = {Maximum {{Likelihood Estimation}} of the {{Negative Binomial Dispersion Parameter}} for {{Highly Overdispersed Data}}, with {{Applications}} to {{Infectious Diseases}}},
+  author = {{Lloyd-Smith}, James O.},
+  editor = {Rees, Mark},
+  year = {2007},
+  month = feb,
+  journal = {PLoS ONE},
+  volume = {2},
+  number = {2},
+  pages = {e180},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0000180},
+  langid = {english},
+  file = {/home/alan/Zotero/storage/FUMMVMLI/Lloyd-Smith - 2007 - Maximum Likelihood Estimation of the Negative Bino.pdf}
+}
